crates/kul-core/tests/snapshots/export__example_08_divorce_and_remarriage.snap
---
source: crates/kul-core/tests/export.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "alice",
        "name": "Alice Reyes",
        "gender": "female",
        "born": {
          "value": "1950-04-12",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "bob",
        "name": "Bob Singh",
        "gender": "male",
        "born": {
          "value": "1948-11-30",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "charlie",
        "name": "Charlie Park",
        "gender": "male",
        "born": {
          "value": "1949-02-22",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "eva",
        "name": "Eva Larsen",
        "gender": "female",
        "born": {
          "value": "1953-08-04",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "carol",
        "name": "Carol Singh",
        "gender": "female",
        "born": {
          "value": "1975-09-03",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "felix",
        "name": "Felix Singh",
        "gender": "male",
        "born": {
          "value": "1994-03-11",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "diana",
        "name": "Diana Park",
        "gender": "female",
        "born": {
          "value": "1997-07-29",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "marriages": [
      {
        "id": "m_alice_bob",
        "spouses": [
          "alice",
          "bob"
        ],
        "start": {
          "value": "1972-05-12",
          "precision": "day",
          "circa": false
        },
        "end": {
          "value": "1990-08-01",
          "precision": "day",
          "circa": false
        },
        "endReason": "divorce"
      },
      {
        "id": "m_bob_eva",
        "spouses": [
          "bob",
          "eva"
        ],
        "start": {
          "value": "1992-06-15",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_alice_charlie",
        "spouses": [
          "alice",
          "charlie"
        ],
        "start": {
          "value": "1995-10-20",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_alice_bob",
        "childId": "carol",
        "kind": "biological"
      },
      {
        "marriageId": "m_bob_eva",
        "childId": "felix",
        "kind": "biological"
      },
      {
        "marriageId": "m_alice_charlie",
        "childId": "diana",
        "kind": "biological"
      }
    ]
  }
}
